# JNP1_6_Project

./: CMakeLists.txt  File.cpp  File.h  OpeningStrategy.cpp  OpeningStrategy.h  PlayMode.cpp  PlayMode.h  Playable.cpp  Playable.h  Player.cpp  Player.h  PlayerException.h  lib_playlist.h  main.cpp
